fix: data-count-active visibility

--- a/assets/dev/scss/_data_attr.scss
+++ b/assets/dev/scss/_data_attr.scss
@@ -19,5 +19,5 @@
 }
 
 [data-count-active='0'] {
-  display: none;
+  visibility: hidden;
 }
