--- a/assets/static/css/main.css
+++ b/assets/static/css/main.css
@@ -337,7 +337,7 @@ h5 {
 }
 
 [data-count-active="0"] {
-  display: none;
+  visibility: hidden;
 }
 
 .display {
